--- a/client/index.html
+++ b/client/index.html
@@ -1,3 +1,28 @@
-<html>
-Hello Git
-</hmtl>
+<!DOCTYPE html>
+<html lang="en" >
+
+<head>
+  <meta charset="UTF-8">
+  <title>Template Literals (Follow Along)</title>
+  
+  
+  
+      <link rel="stylesheet" href="style.css">
+
+  
+</head>
+
+<body>
+
+  <div id="app"></div>
+  
+  
+
+    <script  src="index.js"></script>
+
+
+
+
+</body>
+
+</html>
